sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:10: error: value and is not a member of Boolean
  while(tri and triU and triD)
            ^